--- a/index.html
+++ b/index.html
@@ -2,67 +2,67 @@
 <html>
 <head>
   <title>YouTube</title>
-  <link rel="stylesheet" href="/CSS/index.css">
+  <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
   <header class="header">
     <div class="left">
-      <img class="icon-1" src="/Image/Icons/hamburger-menu.svg">
-      <img class="icon-2" src="/Image/Icons/youtube-logo.svg">
+      <img class="icon-1" src="Image/Icons/hamburger-menu.svg">
+      <img class="icon-2" src="Image/Icons/youtube-logo.svg">
     </div>
     <div class="middle">
       <input class="search" type="text" placeholder="Search">
       <div class="hover-box">
-      <button class="button-1"><img class="icon-3" src="/Image/Icons/search.svg"></button>
+      <button class="button-1"><img class="icon-3" src="Image/Icons/search.svg"></button>
       <div class="text01">Search</div>
       </div>
       <div class="hover-box">
-      <button class="button-2"><img class="icon-4" src="/Image/Icons/voice-search-icon.svg"></button>
+      <button class="button-2"><img class="icon-4" src="Image/Icons/voice-search-icon.svg"></button>
       <div class="text01">&nbsp;&nbsp;Search with your voice</div>
       </div>
     </div>
     <div class="right">
       <div class="hover-box">
-      <img class="icon-5" src="/Image/Icons/upload.svg">
+      <img class="icon-5" src="Image/Icons/upload.svg">
       <div class="text01">Create</div>
       </div>
       <div class="hover-box">
-      <img class="icon-6" src="/Image/Icons/youtube-apps.svg">
+      <img class="icon-6" src="Image/Icons/youtube-apps.svg">
       <div class="text01">YouTube apps</div>
       </div>
       <div class="hover-box">
       <div class="icon-7-box">
-      <img class="icon-7" src="/Image/Icons/notifications.svg">
+      <img class="icon-7" src="Image/Icons/notifications.svg">
       <div class="num">3</div>
       </div>
       <div class="text01">Notifications</div>
       </div>
-      <img class="icon-8" src="/Image/my-channel.jpeg">
+      <img class="icon-8" src="Image/my-channel.jpeg">
     </div>
   </header>
   <nav class="side-bar">
     <div class="side-bar-box">
-      <img src="/Image/Icons/home.svg">
+      <img src="Image/Icons/home.svg">
       <div>Home</div>
     </div>
       <div class="side-bar-box">
-      <img src="/Image/Icons/explore.svg">
+      <img src="Image/Icons/explore.svg">
       <div>Explore</div>
     </div>
     <div class="side-bar-box">
-      <img src="/Image/Icons/subscriptions.svg">
+      <img src="Image/Icons/subscriptions.svg">
       <div>Subscriptions</div>
     </div>
     <div class="side-bar-box">
-      <img src="/Image/Icons/originals.svg">
+      <img src="Image/Icons/originals.svg">
       <div>Originals</div>
     </div>
     <div class="side-bar-box">
-      <img src="/Image/Icons/youtube-music.svg">
+      <img src="Image/Icons/youtube-music.svg">
       <div>YouTube Music</div>
     </div>
     <div class="side-bar-box">
-      <img src="/Image/Icons/library.svg">
+      <img src="Image/Icons/library.svg">
       <div>Library</div>
     </div>
   </nav>
@@ -71,17 +71,17 @@
       <div class="video-box">
         <div class="video-image-box">
         <a href="https:/www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
-          <img src="/Image/thumbnail-1.webp">
+          <img src="Image/thumbnail-1.webp">
         </a>
           <div>14:20</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
           <a href="https:/www.youtube.com/c/mkbhd" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-1.jpeg">
+            <img class="video-channel" src="Image/channel-1.jpeg">
           </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-1.jpeg">
+              <img src="Image/channel-1.jpeg">
               <div>
                 <h3>Marques Brownlee</h3>
                 <p>15M subscribers</p>
@@ -108,17 +108,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
-          <img src="/Image/thumbnail-2.webp">
+          <img src="Image/thumbnail-2.webp">
           </a>
           <div>8:22</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/c/markiplier" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-2.jpeg">
+            <img class="video-channel" src="Image/channel-2.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-2.jpeg">
+              <img src="Image/channel-2.jpeg">
               <div>
                 <h3>Markiplier</h3>
                 <p>15M subscribers</p>
@@ -145,17 +145,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
-          <img src="/Image/thumbnail-3.webp">
+          <img src="Image/thumbnail-3.webp">
           </a>
           <div>9:13</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/user/SSSniperWolf" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-3.jpeg">
+            <img class="video-channel" src="Image/channel-3.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-3.jpeg">
+              <img src="Image/channel-3.jpeg">
               <div>
                 <h3>SSSniperWolf</h3>
                 <p>15M subscribers</p>
@@ -182,17 +182,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
-          <img src="/Image/thumbnail-4.webp">
+          <img src="Image/thumbnail-4.webp">
           </a>
           <div>22:09</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/c/veritasium" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-4.jpeg">
+            <img class="video-channel" src="Image/channel-4.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-4.jpeg">
+              <img src="Image/channel-4.jpeg">
               <div>
                 <h3>Veritasium</h3>
                 <p>15M subscribers</p>
@@ -219,17 +219,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
-          <img src="/Image/thumbnail-5.webp">
+          <img src="Image/thumbnail-5.webp">
           </a>
           <div>11:17</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/c/CSDojo" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-5.jpeg">
+            <img class="video-channel" src="Image/channel-5.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-5.jpeg">
+              <img src="Image/channel-5.jpeg">
               <div>
                 <h3>CS Dojo</h3>
                 <p>15M subscribers</p>
@@ -256,17 +256,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
-          <img src="/Image/thumbnail-6.webp">
+          <img src="Image/thumbnail-6.webp">
           </a>
           <div>19:59</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-6.jpeg">
+            <img class="video-channel" src="Image/channel-6.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-6.jpeg">
+              <img src="Image/channel-6.jpeg">
               <div>
                 <h3>MrBeast</h3>
                 <p>15M subscribers</p>
@@ -293,17 +293,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=fNVa1qMbF9Y" target="_blank">
-          <img src="/Image/thumbnail-7.webp">
+          <img src="Image/thumbnail-7.webp">
           </a>
           <div>10:13</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-7.jpeg">
+            <img class="video-channel" src="Image/channel-7.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-7.jpeg">
+              <img src="Image/channel-7.jpeg">
               <div>
                 <h3>RealLifeLore</h3>
                 <p>15M subscribers</p>
@@ -330,17 +330,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=lFm4EM1juls" target="_blank">
-          <img src="/Image/thumbnail-8.webp">
+          <img src="Image/thumbnail-8.webp">
           </a>
           <div>7:12</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-8.jpeg">
+            <img class="video-channel" src="Image/channel-8.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-8.jpeg">
+              <img src="Image/channel-8.jpeg">
               <div>
                 <h3>Tech Vision</h3>
                 <p>15M subscribers</p>
@@ -367,17 +367,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=ixmxOlcrlUc" target="_blank">
-          <img src="/Image/thumbnail-9.webp">
+          <img src="Image/thumbnail-9.webp">
           </a>
           <div>13:17</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/c/OFFICIALTHENXSTUDIOS" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-9.jpeg">
+            <img class="video-channel" src="Image/channel-9.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-9.jpeg">
+              <img src="Image/channel-9.jpeg">
               <div>
                 <h3>ThenX</h3>
                 <p>15M subscribers</p>
@@ -404,17 +404,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=R2vXbFp5C9o" target="_blank">
-          <img src="/Image/thumbnail-10.webp">
+          <img src="Image/thumbnail-10.webp">
           </a>
           <div>7:53</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/user/businessinsider" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-10.jpeg">
+            <img class="video-channel" src="Image/channel-10.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-10.jpeg">
+              <img src="Image/channel-10.jpeg">
               <div>
                 <h3>Business Insider</h3>
                 <p>15M subscribers</p>
@@ -441,17 +441,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=0nZuYyXET3s" target="_blank">
-          <img src="/Image/thumbnail-11.webp">
+          <img src="Image/thumbnail-11.webp">
           </a>
           <div>4:10</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/c/Destinationtips" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-11.jpeg">
+            <img class="video-channel" src="Image/channel-11.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-11.jpeg">
+              <img src="Image/channel-11.jpeg">
               <div>
                 <h3>Destination Tips</h3>
                 <p>15M subscribers</p>
@@ -478,17 +478,17 @@
       <div class="video-box">
         <div class="video-image-box">
           <a href="https:/www.youtube.com/watch?v=9iMGFqMmUFs" target="_blank">
-          <img src="/Image/thumbnail-12.webp">
+          <img src="Image/thumbnail-12.webp">
           </a>
           <div>4:51</div>
         </div>
         <div class="video-low-box">
           <div class="channel-info">
             <a href="https:/www.youtube.com/teded" target="_blank"> 
-            <img class="video-channel" src="/Image/channel-12.jpeg">
+            <img class="video-channel" src="Image/channel-12.jpeg">
             </a>
             <div class="channel-info-box">
-              <img src="/Image/channel-12.jpeg">
+              <img src="Image/channel-12.jpeg">
               <div>
                 <h3>TED-Ed</h3>
                 <p>15M subscribers</p>
