--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>YouTube</title>
-  <link rel="stylesheet" href="CSS/index.css">
+  <link rel="stylesheet" href="/CSS/index.css">
 </head>
 <body>
   <header class="header">
